--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="top-bar"></div>
+    <div class="top-bar">
+        <div class="logo">
+            <img src="assets/Logo.svg" alt="logo" height="40px">
+        </div>
+        <div class="profile">
+        </div>
+    </div>
     <div class="slide-container">
         <div class="first slide"></div>
         <div class="second slide"></div>
