commit of the day

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <div class="second card"></div>
         <div class="thrid card"></div>
     </div>
-
+    <br> <br> <br> <br> <br> <br> 
+    <div class="card-container">
+        <div class="first card"></div>
+        <div class="second card"></div>
+        <div class="thrid card"></div>
+    </div>
+    
 </body>
 </html>
