--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     </div>
 
     <div class="card-container">
-        <div class="first card"><img src="assets/snake.png" alt="Snake logo"></div>
+        <div class="first card">
+            <div class="image-zoom">
+                <img src="assets/snake.png" alt="Snake logo">
+            </div>
+        </div>
         <div class="second card"></div>
         <div class="thrid card"></div>
     </div>
