--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
                 <img src="assets/snake.png" alt="Snake logo">
             </div>
         </div>
-        <div class="second card"></div>
-        <div class="thrid card"></div>
+        <div class="second card">
+            <div class="image-zoom">
+                <img src="assets/Tic-Tac-Toe.jpg" alt="Snake logo">
+            </div>
+        </div>
+        <div class="thrid card">
+            <div class="image-zoom">
+                <img src="assets/2048.png" alt="Snake logo">
+            </div>
+        </div>
     </div>
     <br> <br> <br> <br> <br> <br> 
     <div class="card-container">
