--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <div class="card-container">
         <div class="first card">
             <div class="image-zoom">
-                <img src="assets/snake.png" alt="Snake logo">
+                <a href="Game1/index.html">
+                    <img src="assets/snake.png" alt="Snake logo">
+                </a>
             </div>
         </div>
         <div class="second card">
