--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
         <div class="second card"></div>
         <div class="thrid card"></div>
     </div>
+
+    <div class="card-container">
+        <div class="first card"></div>
+        <div class="second card"></div>
+        <div class="thrid card"></div>
+    </div>
     
 </body>
 </html>
