--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
         <div class="second card"></div>
         <div class="thrid card"></div>
     </div>
+
+      <div class="card-container">
+        <div class="first card"></div>
+        <div class="second card"></div>
+        <div class="thrid card"></div>
+    </div>
     
 </body>
 </html>
