--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Centre</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="slideAnimation.css">
 </head>
 <body>
     <div class="top-bar">
@@ -16,9 +17,13 @@
     </div>
     
     <div class="slide-container">
-        <div class="first slide"></div>
-        <div class="second slide"></div>
-        <div class="thrid slide"></div>
+        <div class="first slide">
+            <div class="screen">  
+                <div class="screen-image"></div>  
+            </div>
+        </div>
+        <!-- <div class="second slide"></div>
+        <div class="thrid slide"></div> -->
     </div>
 
     <div class="card-container">
